Adding product catalog app

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,13 +1,10 @@
-*.xproj.user
-*.cproj.user
+*.user
 .vs/*
 .vscode/*
 bin/*
-node_modules/*
 obj/*
 *.sln
 *.log
+*.lock.json
 Properties/PublishProfiles/*
 appsettings.development.json
-project.lock.json
-wwwroot/libs/*
